--- a/src/layouts/mainLayout/MainLayout.module.css
+++ b/src/layouts/mainLayout/MainLayout.module.css
@@ -7,3 +7,18 @@
 	align-items: center;
 	justify-content: center;
 }
+
+.header {
+	width: 90%;
+	height: 140px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin: 0px 30px;
+}
+
+.logo {
+	width: 100px;
+	border-radius: 60px;
+	padding: 0px 0px 0px 0px;
+}
