--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,46 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* Убираем оформление списков */
+ul,
+ol {
+  list-style: none;
+}
+
+/* Убираем подчёркивания у ссылок */
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+/* Делаем картинки адаптивными */
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
+
+/* Наследуем шрифты для кнопок и форм */
+button,
+input,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Убираем обводку при фокусе, если она не нужна */
+:focus {
+  outline: none;
+}
+
+/* Заполняем весь экран */
+html,
 body {
+  height: 100%;
+  font-family: sans-serif;
   margin: 0 auto;
   min-width: 320px;
   background-color: #CAB892;
