--- a/src/pages/threeCardPage/ThreeCardPage.module.css
+++ b/src/pages/threeCardPage/ThreeCardPage.module.css
@@ -1,6 +1,6 @@
 .main {
 	width: 100%;
-	min-width: 500px;
+	min-width: 320px;
 	height: auto;
 	display: flex;
 	flex-direction: column;
@@ -36,10 +36,10 @@
 }
 
 .cardsList {
-	width: 500px;
-	min-width: 500px;
+	width: 90%;
 	display: flex;
 	align-items: center;
-	justify-content: space-between;
+	justify-content: center;
 	margin: 0px 0px 20px 0px;
+	padding: 0px 3%;
 }
